<resources>
    <string name="app_name">ReciclApp</string>

    <!-- Desarrollador -->
    <string name="infoDesarrollador">Desarrollador</string>
    <string name="titulo_desarrollador">Info del desarrollador</string>
    <string name="nombre_desarrolador">Irving Romero</string>
    <string name="correo_desarrollador">i.romerog93@gmail.com</string>
    <string name="carrera_desarrollador">Estudiante Ing.Sistemas computacionales</string>
    <string name="escuela_desarrollador">Instituto tecnoloigico de mexicali</string>
    <string name="lugar_desarrollo">Mexicali, 2018</string>

    <!-- Inicio Sesion -->
    <string name="Entrar_inicio">Entrar</string>
    <string name="nocuenta">¿No tienes cuenta?</string>
    <string name="btnRegistro_inicio">Registrarse</string>

    <!-- Registro usuarios -->
    <string name="registroListo_rUsu">Listo</string>

    <!-- Sesion Recicicladora -->
    <string name="registroRecicla">Registro de Recicladora</string>
    <string name="registrarReci">Registrar</string>

    <string name="title_activity_sesion_recicladora">SesionRecicladora</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="agregarImagen">Agregar imagen</string>
    <string name="modificarDatos">Modificar datos</string>
    <string name="agregarUbicacion">Ubicacion</string>
    <string name="agregarHorario">Horario</string>
    <string name="agregarRecicladora">Agregar recicladora</string>
    <string name="cerrarSesion">Cerrar Sesion</string>

    <string name="misMateriales_sesionReci">Mis materiales</string>
    <string name="miPuntuacion">Puntuacion</string>

    <string name="menu_fam">Administrar materiales</string>
    <string name="agregarMaterial_sesionReci">Agregar material</string>
    <string name="modificarMaterial_sesionReci">Modificar</string>
    <string name="eliminarMaterial_sesionReci">Eliminar</string>

    <!-- Registro Recicicladora -->
    <string name="textoModifRe">Modificar datos</string>

    <!-- Modificar recicladora  -->
    <string name="actualizarRecicla">Actualizar datos</string>

    <!-- Horario  recicladora-->
    <string name="nombre_horarioRecicla">Horarios</string>
    <string name="lunes_horario">Lunes:</string>
    <string name="martes_horario">Martes:</string>
    <string name="miercoles_horario">Miercoles:</string>
    <string name="jueves_horario">Jueves:</string>
    <string name="viernes_horario">Viernes:</string>
    <string name="sabado_horario">Sabado:</string>
    <string name="domingo_horario">Domingo:</string>
    <string name="cerrado_horario">¿Cerrado?</string>
    <string name="agregar_horarioRecicla">Añadir</string>

    <!-- Inicio principal  --> <!-- MENU -->
    <string name="sesionRegistro_inicioPrin">Iniciar sesion o Registrarse</string>
    <string name="material_inicioPrin">Buscar material</string>
    <string name="mejorPrecio">Mejor precio</string>
    <string name="guiaReciclaje_inicioPrin">Guia de reciclaje</string>
    <string name="manualidades_inicioPrin">Manualidades</string>
    <string name="donativos">Donar</string>

    <string name="masCercano">Mas cercano</string>
    <string name="modificarDatos_menu">Modificar datos</string>

    <!-- Datos recicladora -->
    <string name="tb_informacion">Informacion</string>
    <string name="nombre_datosReci">Nombre:</string>
    <string name="correo_datosReci">Correo:</string>
    <string name="telefono_datosReci">Telefono:</string>
    <string name="calle1_datosReci">Calle:</string>
    <string name="calle2_datosReci">Entre calle:</string>
    <string name="colonia_datosReci">Colonia:</string>
    <string name="numeroInt_datosReci">Numero interior:</string>
    <string name="tvMateriales_datosReci">Materiales que aceptan</string>
    <string name="textPuntuacion_datosReci">Deja una puntuacion!</string>
    <string name="textoHorarios_datosReci">Horarios</string>
    <string name="textoBoton_datosRecicla">Puntuar</string>

    <!-- modificar recicladora  -->
    <string name="modificar_modifRecicla">Modificar datos</string>
    <string name="actealizar_modifRecicla">Actualizar datos</string>

    <!-- ubicacion recicladora  -->
    <string name="ubicacion_ubicacionReci">Ubicacion recicladora</string>
    <string name="seleccionar_ubicacionReci">Seleccionar</string>

    <!-- Sesion usuario -->
    <string name="textoModificarUsuario">Actualizar datos</string>
    <string name="textoCorreo">Correo</string>
    <string name="textoContra">Contraseña</string>
    <string name="textoModificar">Modificar</string>

</resources>