<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/modificarDatos_sesionUsuario"
            android:icon="@drawable/modificar"
            android:title="@string/modificarDatos_menu" />
        <item
            android:id="@+id/buscarMaterial_sesionUsuario"
            android:icon="@drawable/buscar_material"
            android:title="@string/material_inicioPrin" />
        <item
            android:id="@+id/mejorPrecio_sesionUsuario"
            android:icon="@drawable/mejor_precio"
            android:title="@string/mejorPrecio" />
        <item
            android:id="@+id/masCercano_sesionUsuario"
            android:icon="@drawable/ubicacion"
            android:title="@string/masCercano" />
    <item
        android:id="@+id/cerrarSesion_sesionUsuario"
        android:icon="@drawable/salir"
        android:title="@string/cerrarSesion" />

    <item android:title="Guias de reciclaje">
        <menu>
            <item
                android:id="@+id/guiaReciclaje_sesionUsuario"
                android:icon="@drawable/guia_reciclaje"
                android:title="@string/guiaReciclaje_inicioPrin" />
            <item
                android:id="@+id/manualidades_sesionUsuario"
                android:icon="@drawable/manualidades"
                android:title="@string/manualidades_inicioPrin" />
            <item
                android:id="@+id/donar_sesionUsuario"
                android:icon="@drawable/donar"
                android:title="@string/donativos" />
        </menu>
    </item>

    <item android:title="Informacion">
        <menu>
            <item
                android:id="@+id/infoDesarrollador_sesionUsuario"
                android:icon="@drawable/info"
                android:title="@string/infoDesarrollador" />
        </menu>
    </item>

</menu>
