<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/sesionRegistro_inicioPrin"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sesionRegistro_inicioPrin" />
        <item
            android:id="@+id/buscarMaterial_inicioPrin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/material_inicioPrin" />
        <item
            android:id="@+id/mejorPrecio_inicioPrin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mejorPrecio" />

    <item android:title="Guias de reciclaje">
        <menu>
            <item
                android:id="@+id/guia"
                android:icon="@drawable/ic_menu_send"
                android:title="Guia de reciclaje" />
            <item
                android:id="@+id/manualidades"
                android:icon="@drawable/ic_menu_send"
                android:title="Manualidades" />
            <item
                android:id="@+id/donar"
                android:icon="@drawable/ic_menu_send"
                android:title="Donar " />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/programador_inicioPrin"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/infoDesarrollador" />
        </menu>
    </item>
</menu>