<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SesionRecicladora.SesionRecicladora">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_sesion_recicladora" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam"
        app:menu_fab_label="@string/menu_fam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAgregarMaterial_sesionReci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="agregarMaterial"
            app:fab_label="@string/agregarMaterial_sesionReci"
            android:src="@drawable/agregar_material" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabModificar_sesionReci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/modificarMaterial_sesionReci"
            android:onClick="modificarMaterial"
            android:src="@drawable/editar_material"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabEliminar_sesionReci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/eliminarMaterial_sesionReci"
            android:onClick="eliminarMaterial"
            android:src="@drawable/eliminar_material"/>
    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>