<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rlAgrega_horario"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lunes_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunes_horario"
            />
        <TextView
            android:id="@+id/abreL_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abre_horario"/>

        <Spinner
            android:id="@+id/spLunHrAb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/hrs"/>
        <Spinner
            android:id="@+id/spLunMinAb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/mins"/>
        <Spinner
            android:id="@+id/spAmPmAb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ampm">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cierra" />

        <Spinner
            android:id="@+id/spLunesHrCi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/hrs"/>
        <Spinner
            android:id="@+id/spLunesMinCi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/mins"/>
        <Spinner
            android:id="@+id/spAmPmCi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/ampm">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/martes_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/martes_horario" />

        <TextView
            android:id="@+id/abreM_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abre_horario" />

        <Spinner
            android:id="@+id/spMartesA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miercoles_horario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abre_horario"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jueves_horario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abre_horario"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viernes_horario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abre_horario"/>
    </LinearLayout>
</LinearLayout>